[tool.poetry]
name = "estrutura-workshop"
version = "0.1.0"
description = "meu projeto de ETL"
authors = ["Paulo Oliveira <oliveiraphm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.3"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
